# tour-de-sol

./: .gitbook.yaml  .gitignore  .travis.yml  Cargo.toml  README-internal.md  README.md  bench-tps.sh  destake-net-nodes.sh  get-url.sh  import-keybase-ids.sh  import-keybase-usernames.sh  net  remote-bench-tps.sh  rpc-check.sh  show-stake-accounts.sh  show-vote-accounts.sh  wrapper-bench-tps.sh
dash/: README.md  main.js  package.json
gitbook/: README.md  SUMMARY.md  connecting-your-validator.md  monitoring-your-validator.md  publishing-information-about-your-validator.md  useful-links.md  validator-public-key-registration.md  validator-registration-and-rewards-faq.md
gitbook/faqs/: participation-faqs.md
gitbook/participation/: dry-run-5.md  dry-run-6.md  validator-technical-requirements.md
gitbook/participation/steps-to-create-a-validator/: README.md  confirm-the-solana-network-is-running.md  connect-to-the-solana-network.md  connecting-your-validator.md  delegating-stake.md  install-the-solana-software.md  monitoring-your-validator.md  publishing-information-about-your-validator.md  validator-public-key-registration.md
gitbook/registration/: rewards.md  terms-of-participation.md
ip-collector/: .gitignore  README.md  audit.js  collect.js  package.json
prize-tool/: Cargo.toml
prize-tool/src/: availability.rs  confirmation_latency.rs  main.rs  prize.rs  rewards_earned.rs  utils.rs
ramp-tps/: Cargo.toml  validators
ramp-tps/src/: main.rs  notifier.rs  results.rs  slack.rs  stake.rs  tps.rs  utils.rs  voters.rs
stage1/: keybase-ids  validator.yml
stake-them-all/: stake.sh
validators/: all-pubkey.yml  all-username.yml  all.md  all.yml  earth-pubkey.yml  earth-username.yml  earth.yml  internal-pubkey.yml  internal-username.yml  internal.yml  keybase-usernames.earth  keybase-usernames.internal
winner-tool/: Cargo.toml
winner-tool/src/: availability.rs  confirmation_latency.rs  main.rs  rewards_earned.rs  utils.rs  winner.rs
