[package]
authors = ["Solana Maintainers <maintainers@solana.com>"]
edition = "2018"
name = "solana-tds-prize-tool"
description = "Solana Tour de SOL prize tool"
version = "1.0.0"
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/tds"

[dependencies]
clap = "2.33.0"
log = "0.4.8"
solana-core = { git = "https://github.com/jstarry/solana", branch = "blocktree-process-opts" }
solana-logger = { git = "https://github.com/jstarry/solana", branch = "blocktree-process-opts" }
solana-runtime = { git = "https://github.com/jstarry/solana", branch = "blocktree-process-opts" }
solana-sdk = { git = "https://github.com/jstarry/solana", branch = "blocktree-process-opts" }
solana-stake-api = { git = "https://github.com/jstarry/solana", branch = "blocktree-process-opts" }
solana-vote-api = { git = "https://github.com/jstarry/solana", branch = "blocktree-process-opts" }
