[package]
authors = ["Solana Maintainers <maintainers@solana.com>"]
edition = "2018"
name = "solana-ramp-tps"
description = "Solana Tour de SOL - TPS ramp up"
version = "1.0.0"
repository = "https://github.com/solana-labs/tour-de-sol"
license = "Apache-2.0"
homepage = "https://solana.com/tds"

[dependencies]
bzip2 = "0.3.3"
clap = "2.33.0"
log = "0.4.8"
reqwest = { version = "0.9.22", default-features = false }
slack = "0.22"
tar = "0.4.26"

# Pinning versions until the next solana release (0.20)
solana-client = { git = "https://github.com/solana-labs/solana", rev = "0b2d4f32f" }
solana-logger = { git = "https://github.com/solana-labs/solana", rev = "0b2d4f32f" }
solana-netutil = { git = "https://github.com/solana-labs/solana", rev = "0b2d4f32f" }
solana-sdk = { git = "https://github.com/solana-labs/solana", rev = "0b2d4f32f" }
solana-stake-api = { git = "https://github.com/solana-labs/solana", rev = "0b2d4f32f" }
