[package]
authors = ["Solana Maintainers <maintainers@solana.com>"]
edition = "2018"
name = "solana-ramp-tps"
description = "Solana Tour de SOL - TPS ramp up"
version = "1.0.0"
repository = "https://github.com/solana-labs/tour-de-sol"
license = "Apache-2.0"
homepage = "https://solana.com/tds"

[dependencies]
bzip2 = "0.3.3"
clap = "2.33.0"
log = "0.4.8"
reqwest = { version = "0.9.22", default-features = false }
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.8.11"
solana-core = { git = "https://github.com/solana-labs/solana", tag = "v0.22.4" }
solana-client = { git = "https://github.com/solana-labs/solana", tag = "v0.22.4" }
solana-logger = { git = "https://github.com/solana-labs/solana", tag = "v0.22.4" }
solana-metrics = { git = "https://github.com/solana-labs/solana", tag = "v0.22.4" }
solana-net-utils = { git = "https://github.com/solana-labs/solana", tag = "v0.22.4" }
solana-sdk = { git = "https://github.com/solana-labs/solana", tag = "v0.22.4" }
solana-stake-program = { git = "https://github.com/solana-labs/solana", tag = "v0.22.4" }
tar = "0.4.26"
