[package]
authors = ["Solana Maintainers <maintainers@solana.com>"]
edition = "2018"
name = "solana-tds-winner-tool"
description = "Solana Tour de SOL winner tool"
version = "1.0.0"
repository = "https://github.com/solana-labs/tour-de-sol"
license = "Apache-2.0"
homepage = "https://solana.com/tds"

[dependencies]
clap = "2.33.0"
log = "0.4.8"
solana-clap-utils = { path = "../../solana/clap-utils", version = "0.21.6" }
solana-ledger = { path = "../../solana/ledger", version = "0.21.6" }
solana-logger = { path = "../../solana/logger", version = "0.21.6" }
solana-runtime = { path = "../../solana/runtime", version = "0.21.6" }
solana-sdk = { path = "../../solana/sdk", version = "0.21.6" }
solana-stake-program = { path = "../../solana/programs/stake", version = "0.21.6" }
solana-vote-program = { path = "../../solana/programs/vote", version = "0.21.6" }
