[package]
authors = ["Solana Maintainers <maintainers@solana.com>"]
edition = "2018"
name = "solana-tds-winner-tool"
description = "Solana Tour de SOL winner tool"
version = "1.0.0"
repository = "https://github.com/solana-labs/tour-de-sol"
license = "Apache-2.0"
homepage = "https://solana.com/tds"

[dependencies]
clap = "2.33.0"
log = "0.4.8"
serde_yaml = "0.8.11"
solana-clap-utils = { git = "https://github.com/solana-labs/solana", rev = "v0.22.3" }
solana-ledger = { git = "https://github.com/solana-labs/solana", rev = "v0.22.3" }
solana-logger = { git = "https://github.com/solana-labs/solana", rev = "v0.22.3" }
solana-runtime = { git = "https://github.com/solana-labs/solana", rev = "v0.22.3" }
solana-sdk = { git = "https://github.com/solana-labs/solana", rev = "v0.22.3" }
solana-stake-program = { git = "https://github.com/solana-labs/solana", rev = "v0.22.3" }
solana-vote-program = { git = "https://github.com/solana-labs/solana", rev = "v0.22.3" }
